Fixed margin on small screens and updated meta tags

--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -164,14 +164,4 @@ footer {
     .featurette-divider {
         margin: 10px 0;
     }
-
-    .featurette-image.pull-left {
-        margin-right: 0;
-        margin-bottom: 10px;
-    }
-
-    .featurette-image.pull-right {
-        margin-bottom: 10px;
-        margin-left: 0;
-    }
 }
